--- a/SportsStore/SportsStore.WebUI/Views/Shared/Site.Master
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/Site.Master
@@ -7,6 +7,10 @@
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link rel="Alternate" type="application/rss+xml" title="New Sportstore products" href="http://localhost:1083/rss/feed" />
+    <script type="text/javascript" src="<%: Url.Content("~/scripts/jquery-1.4.1.js") %>" ></script>
+    <script type="text/javascript" src="<%: Url.Content("~/scripts/MicrosoftAjax.js") %>" ></script>
+    <script type="text/javascript" src="<%: Url.Content("~/scripts/foo.js") %>" ></script>
+   
 </head>
 <body>
     <div id="header">
@@ -22,5 +26,7 @@
     <div id="content">
         <asp:ContentPlaceHolder ID="MainContent" runat="server" />
     </div>
+
+    <script type="text/javascript" src="<%: Url.Content("~/scripts/fooDetails.js") %>" ></script>
 </body>
 </html>
